--- a/_config.yml
+++ b/_config.yml
@@ -6,31 +6,31 @@ repository: Git repository where your resume will be hosted, only required if yo
 version: 2
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
+name: Yulong Zheng
+title: Ph.D. Candidate in Physical Chemistry
+email: yulong.zheng@gatech.edu
 # email_title: Email (Email title override)
-phone: Your phone number (optional)
+# phone: 4042686540
 # phone_title: Phone (Phone title override)
-website: Your website (eg. https://google.com)(optional)
+website: Beandope.gatech.io
 # website_title: Web (Website title override)
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-stackoverflow_username: "00000001"
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
+# twitter_username: jekyllrb
+github_username:  Beandope
+# stackoverflow_username: "00000001"
+# dribbble_username: jekyll
+# facebook_username: jekyll
+# flickr_username: jekyll
+instagram_username: ppatrickki
+linkedin_username: yulong-zheng-aa71a0128
+# xing_username: jekyll
+# pinterest_username: jekyll
+# youtube_username: jekyll
+googlescholar_username: pcLymh4AAAAJ&hl=en
 orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
