--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ content:
           - Conducted TCSPC and Fluorescence Upconversion measurements to investigate the exciton dynamics from femto-microsecond time range.
           - Built an extended free-space beam path for the ability to measure time-resolved PL under a large range of temperatures.
      
-        title： Exciton Dynamics in Electron Push-Pull Polymers
+#         title： Exciton Dynamics in Electron Push-Pull Polymers
 
         
   - title: Experience
