--- a/_config.yml
+++ b/_config.yml
@@ -52,16 +52,11 @@ google_username: pcLymh4AAAAJ&hl=en
 # about_title: About Me (Use this to override about section title)
 about_profile_image: /Users/yulongzheng/Pictures/selfie.jpeg (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Born and raised in Hubei, China. 
-  Have been to/lived in a few places around the world.
-  Always excited about high tech.
-  A chemist who does not too chemistry stuff.
+  - Born and raised in Hubei, China. 
+  - Have been to/lived in a few places around the world.
+  - Always excited about high tech.
+  - A chemist who does not do too chemistry stuff.
   
-  You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images ![alt text](/images/landscape-trees.jpg "Trees")
 
 content:
   - title: Research Projects # Title for the section
