--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
-favicon: Users/yulongzheng/Pictures/selfie.jpeg (eg. images/favicon.ico)(optional)
+favicon: images/selfie.jpeg (eg. images/favicon.ico)(optional)
 
 # Content configuration version
 version: 2
@@ -50,7 +50,7 @@ google_username: pcLymh4AAAAJ&hl=en
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Users/yulongzheng/Pictures/selfie.jpeg (eg. images/profile.jpg)
+about_profile_image: images/selfie.jpeg (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
   - Born and raised in Hubei, China. 
   - Have been to/lived in a few places around the world.
