--- a/_config.yml
+++ b/_config.yml
@@ -42,22 +42,16 @@ google_username: pcLymh4AAAAJ&hl=en
 # #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 # #   url: Link url (eg. https://google.com)
 
-# Google Analytics and Tag Manager
-# Using more than one of these may cause issues with reporting
-# gtm: "GTM-0000000"
-# gtag: "UA-00000000-0"
-# google_analytics: "UA-00000000-0"
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: /images/selfie.jpg (eg. images/profile.jpg)
+about_profile_image: images/selfie.jpg (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
   - Born and raised in Hubei, China. 
   - Have been to/lived in a few places around the world.
   - Always excited about high tech.
   - A chemist who does not do too chemistry stuff.
-  
-
+ 
 content:
   - title: Research Projects # Title for the section
     layout: list # Type of content section (list/text)
