--- a/_config.yml
+++ b/_config.yml
@@ -77,12 +77,11 @@ content:
           - Built an extended free-space beam path for the ability to measure time-resolved PL under a large range of temperatures.
      
 
-        
   - title: Experience
     layout: list
     content:
       - layout: right
-        title: [<Silva Lab>](https://silva.chemistry.gatech.edu/)
+        title: [Silva Lab](https://silva.chemistry.gatech.edu/)
         sub_title: Graduate Research Assistant
         caption: April 2019 - present
 #         link: Link to company (optional)
