--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ content:
           Specialized in nonlinear, ultrafast spectroscopy, solid-state physics.
  
   - title: Publication
-    layout: text
+    layout: list
     content: | # this will include new lines to allow paragraphs
       - [Venkatesh, Rahul, <Yulong Zheng>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
           Solution Concentration as a Key Parameter in Device Performance." ACS Materials Letters 3, no. 9 (2021): 1321-1327.](https://pubs.acs.org/doi/abs/10.1021/acsmaterialslett.1c00320)
