--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
+repository: https://github.com/Beandope/Beandope.github.io
 # favicon: images/selfie.jpg (eg. images/favicon.ico)(optional)
 
 # Content configuration version
