--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: https://github.com/Beandope/Beandope.github.io
+repository: Beandope/Beandope.github.io
 # favicon: images/selfie.jpg (eg. images/favicon.ico)(optional)
 
 # Content configuration version
