--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: Beandope/Beandope.github.io
-# favicon: images/selfie.jpg (eg. images/favicon.ico)(optional)
+# favicon: images/selfie.jpg
 
 # Content configuration version
 version: 2
@@ -94,21 +94,21 @@ content:
             cross-polarized optical microscopy (CPOM).
           - Experiences in building simulation models in calculating optical features of organic semiconductor polymers as well as data analysis and visualization using Python.
   
-#   - title: 
-#     layout: list
-  - content:
-    layout: left
-    title: Duhamel Lab
-    sub_title: Undergraduate Research Assistant
-    caption: May 2017 - present
-    link: https://uwaterloo.ca/chemistry/people-profiles/jean-duhamel
-#         quote: >
-#            Molecular Spectroscopy, Polymer Structure Characterization Waterloo, Canada
-    description: | # this will include new lines to allow paragraphs
-      - Hands on experiences with organic synthesis, and purification methods such as dialysis, precipitation and freeze-dry.
-      - Applied UV, steady-state and time-resolved PL to characterize the content of the dyes and the ratio of excimer to 
-        monomer contributions to the total fluorescence spectra.
-      - Adopted home-written Fluorescence Blob Model (FBM) to simulate and analyze the kinetics of the polymer chain movement.
+  - title: 
+    layout: list
+    content:
+      - layout: left
+        title: Duhamel Lab
+        sub_title: Undergraduate Research Assistant
+        caption: May 2017 - present
+        link: https://uwaterloo.ca/chemistry/people-profiles/jean-duhamel
+  #         quote: >
+  #            Molecular Spectroscopy, Polymer Structure Characterization Waterloo, Canada
+        description: | # this will include new lines to allow paragraphs
+          - Hands on experiences with organic synthesis, and purification methods such as dialysis, precipitation and freeze-dry.
+          - Applied UV, steady-state and time-resolved PL to characterize the content of the dyes and the ratio of excimer to 
+            monomer contributions to the total fluorescence spectra.
+          - Adopted home-written Fluorescence Blob Model (FBM) to simulate and analyze the kinetics of the polymer chain movement.
   
   - title: Education
     layout: list
