--- a/_config.yml
+++ b/_config.yml
@@ -116,11 +116,15 @@ content:
       - layout: right
         title: Georgia Institute of Technology
         caption: August 2018 - present
-        link: https://uwaterloo.ca/chemistry/people-profiles/jean-duhamel
   #         quote: >
   #            Molecular Spectroscopy, Polymer Structure Characterization Waterloo, Canada
         description: | # this will include new lines to allow paragraphs
           Ph.D Candidate in physical chemistry, specialized in nonlinear, ultrafast spectroscopy, and solid-state physics.
+  - content:
+      - layout: right
+        title: University of Waterloo
+        
+  
 #  - title: Education
 #    layout: list
 #    content:
