--- a/_config.yml
+++ b/_config.yml
@@ -116,14 +116,16 @@ content:
       - layout: right
         title: Georgia Institute of Technology
         caption: August 2018 - present
-  #         quote: >
-  #            Molecular Spectroscopy, Polymer Structure Characterization Waterloo, Canada
         description: | # this will include new lines to allow paragraphs
           Ph.D Candidate in physical chemistry, specialized in nonlinear, ultrafast spectroscopy, and solid-state physics.
-
-      - layout: left
+      - layout: right
         title: University of Waterloo
         caption: July 2016 - April 2018
+        description: |
+          Bachelor of Science in Chemistry
+      - layout: right
+        title: Huazhong University of Science and Technology
+        caption: September 2014 - June 2016
         description: |
           Bachelor of Science in Chemistry
         
@@ -131,7 +133,7 @@ content:
   - title: Publication
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Venkatesh, Rahul, <mark>Yulong Zheng<\mark>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
+      Venkatesh, Rahul, <mark>Yulong Zheng</mark>, Campbell Viersen, Aaron Liu, Carlos Silva, Martha Grover, and Elsa Reichmanis. "Data Science Guided Experiments Identify Conjugated Polymer 
       Solution Concentration as a Key Parameter in Device Performance." [ACS Materials Letters 3, no. 9 (2021): 1321-1327.](https://pubs.acs.org/doi/abs/10.1021/acsmaterialslett.1c00320)
       
       
